Clean up layout styles and fix sidebar scrollbar.

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,7 @@
 </div>
 	<script src="js/rivets.bundled.min.js"></script>
     <script src="js/vendor/jquery.cssAnimateAuto.js"></script>
+    <script src="js/vendor/perfect-scrollbar.jquery.js"></script>
 	<script src="js/vendor/jquery.autogrow-min.js"></script>
 	<script src="js/vendor/selectize.js"></script>
 	<script src="js/bootstrap.js"></script>
