--- a/templates/login.html
+++ b/templates/login.html
@@ -147,8 +147,10 @@
 		</div>
 	</div>
 
-    <script src="js/vendor/jquery.tokeninput.js"></script>
+	<script src="js/rivets.bundled.min.js"></script>
+    <script src="js/vendor/jquery.cssAnimateAuto.js"></script>
 	<script src="js/vendor/jquery.autogrow-min.js"></script>
+	<script src="js/vendor/selectize.js"></script>
 	<script src="js/bootstrap.js"></script>
 </body>
 </html>
