--- a/templates/scss/components/_navigation.scss
+++ b/templates/scss/components/_navigation.scss
@@ -2,7 +2,10 @@
 	padding: 20px;
 	border-bottom: 1px solid rgb(224,224,224);
 	width: 100%;
-	margin-bottom: 8em;
+	position: fixed;
+	top: 0;
+	z-index: 20;
+	background: rgb(245, 245, 245);
 }
 
 .top-nav-wrapper {
@@ -60,29 +63,29 @@
 	width: 80%;
 }
 
-.search-icon:after {
-	position: absolute;
-	background: rgba(228,186,63,0.9);
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-	content: '';
-	border-radius: 50%;
-	width: 0vw;
-	height: 0vh;
-	z-index: 1;
-	opacity: 1;
-	visibility: visible;
-	transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0s 0.5s, visibility 0s 0.5s; 
-}
+// .search-icon:after {
+// 	position: absolute;
+// 	background: rgba(228,186,63,0.9);
+// 	left: 50%;
+// 	top: 50%;
+// 	transform: translate(-50%,-50%);
+// 	content: '';
+// 	border-radius: 50%;
+// 	width: 0vw;
+// 	height: 0vh;
+// 	z-index: 1;
+// 	opacity: 1;
+// 	visibility: visible;
+// 	transition: width 0.5s ease-in-out, height 0.5s ease-in-out, opacity 0s 0.5s, visibility 0s 0.5s; 
+// }
 
-.search-icon.expanded:after {
-	height: 300vw;
-	width: 300vw;
-	opacity: 0;
-	visibility: hidden;
-	z-index: -1;
-}
+// .search-icon.expanded:after {
+// 	height: 300vw;
+// 	width: 300vw;
+// 	opacity: 0;
+// 	visibility: hidden;
+// 	z-index: 1;
+// }
 
 
 .search-icon {
