--- a/templates/scss/components/tasks/_layout.scss
+++ b/templates/scss/components/tasks/_layout.scss
@@ -89,7 +89,10 @@
 	width: 100%;
 	margin-bottom: 0.5em;
 	line-height: 1.2;
-	height: 1.2em;
+	height: 1em;
+	min-height: 1.5em;
+	font-size: 1em;
+	color: inherit;
 }
 
 .task-assigned-project {
@@ -108,6 +111,7 @@
 	}
 
 }
+
 
 .task-description-input {
 	font-size: 1.313em;
@@ -150,4 +154,9 @@
 	.task-description-input {
 		  padding-top: 0.4em;
 	}
+	transition: border 0.3s ease-out;
+}
+
+.add-task-block.lazy-val-error {
+	border: rgb(238, 86, 38) 2px solid;
 }
