--- a/templates/scss/overlays/_new-project.scss
+++ b/templates/scss/overlays/_new-project.scss
@@ -67,7 +67,7 @@
 
 }
 
-.project-title-input, .task-description-input, .subtask-input {
+.project-title-input, .js-task-description-input, .subtask-input {
 	background: none;
 	border: none;
 	font-family: inherit;
