--- a/templates/scss/animation/_filtering.scss
+++ b/templates/scss/animation/_filtering.scss
@@ -8,8 +8,35 @@
 		visibility 0.3s $easeInOutCubic;
 }
 
-.content-load-area.personal {
-	.basic-task {
+// .content-load-area.personal {
+// 	.basic-task {
+// 		visibility: hidden;
+// 		height: 0;
+// 		overflow: hidden;
+// 		margin: 0;
+// 		padding: 0;
+// 		opacity: 0;
+// 		transform: translateX(-30%);
+// 		transition: 
+// 			transform 0.3s $easeInOutCubic,
+// 			opacity 0.3s $easeInOutCubic, 
+// 			height 0.3s 0.2s $easeInOutCubic, 
+// 			padding 0.3s 0.2s $easeInOutCubic, 
+// 			margin 0.3s 0.2s $easeInOutCubic, 
+// 			visibility 0.3s 0.3s $easeInOutCubic;
+// 	}
+
+// 	.basic-task[data-scope="personal"], .add-task-block {
+// 		visibility: visible;
+// 		height: 88px;
+// 		opacity: 1;
+// 		margin-bottom: 2em;
+// 		padding: 1.5em 3em;
+// 		transform: translateX(0);
+// 	}
+// }
+
+.basic-task.expand-enter, .basic-task.expand-leave {
 		visibility: hidden;
 		height: 0;
 		overflow: hidden;
@@ -24,14 +51,4 @@
 			padding 0.3s 0.2s $easeInOutCubic, 
 			margin 0.3s 0.2s $easeInOutCubic, 
 			visibility 0.3s 0.3s $easeInOutCubic;
-	}
-
-	.basic-task[data-scope="personal"], .add-task-block {
-		visibility: visible;
-		height: 88px;
-		opacity: 1;
-		margin-bottom: 2em;
-		padding: 1.5em 3em;
-		transform: translateX(0);
-	}
 }
