--- a/templates/style.css
+++ b/templates/style.css
@@ -223,10 +223,10 @@ html {
 .task-description {
   overflow: hidden;
   width: 100%;
-  margin-bottom: 0.5em;
   line-height: 1.2;
   height: 1em;
-  min-height: 1.5em;
+  padding-left: 0;
+  display: inherit;
   font-size: 1em;
   color: inherit; }
 
@@ -249,6 +249,16 @@ html {
   min-height: 100px;
   border-bottom: 1px solid whitesmoke;
   margin-bottom: 1em; }
+
+.task-description-wrapper {
+  margin-bottom: 0.5em;
+  overflow: hidden; }
+
+.task-description-wrapper.hidden-text {
+  max-height: 24px !important; }
+
+.task-description-wrapper.animated-height {
+  transition: max-height 0.4s cubic-bezier(0.215, 0.61, 0.355, 1); }
 
 .left-hand-form-col, .right-hand-form-col {
   float: left; }
@@ -588,7 +598,7 @@ html {
 .basic-task {
   transition: transform 0.3s 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.3s 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), height 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), padding 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), margin 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), visibility 0.3s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
-.content-load-area.personal .basic-task {
+.basic-task.expand-enter, .basic-task.expand-leave {
   visibility: hidden;
   height: 0;
   overflow: hidden;
@@ -597,13 +607,6 @@ html {
   opacity: 0;
   transform: translateX(-30%);
   transition: transform 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1), height 0.3s 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), padding 0.3s 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), margin 0.3s 0.2s cubic-bezier(0.645, 0.045, 0.355, 1), visibility 0.3s 0.3s cubic-bezier(0.645, 0.045, 0.355, 1); }
-.content-load-area.personal .basic-task[data-scope="personal"], .content-load-area.personal .add-task-block {
-  visibility: visible;
-  height: 88px;
-  opacity: 1;
-  margin-bottom: 2em;
-  padding: 1.5em 3em;
-  transform: translateX(0); }
 
 .content-inner-wrapper {
   max-width: 945px;
