Remove data output on individual tasks.

--- a/templates/index.html
+++ b/templates/index.html
@@ -131,9 +131,9 @@
 								</div>
 							</a>
 						</div>
-						<div class="clearfix data" style="width: 100%; float: left; margin-top: 1em;">
+<!-- 						<div class="clearfix data" style="width: 100%; float: left; margin-top: 1em;">
 							<pre>data: {{$data | json 2}}</pre>
-						</div>
+						</div> -->
 					</li>
 				</ul>
 			</div>
