Make autosize fire on task added via vue.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,7 @@
 					<li data-scope="personal" class="basic-task rounded-white-modal clearfix mix" v-repeat="tasks" v-transition="expand">
 						<div class="task-left-col">
 							<div class="task-description-wrapper hidden-text">
-								<textarea rows="1" class="task-description js-task-description-input" contentEditable="true" style="outline:none" type="text" v-model="content"></textarea>
+								<textarea rows="1" class="task-description js-task-description-input" style="outline:none" type="text" v-model="content" v-autosize></textarea>
 							</div>
 							<span class="task-assigned-project">{{project}}</span>
 							<span class="task-time-added">
